Removed rv-shopify-img attribute for server-site rendered images

--- a/src/scss/bundle.scss
+++ b/src/scss/bundle.scss
@@ -2,6 +2,10 @@
 @import 'variables';
 @import '../../node_modules/bootstrap/scss/bootstrap.scss';
 
+
+// Bootstrap style extensions from @ribajs/bs4
+@import "../../node_modules/@ribajs/bs4/src/index";
+
 // custom extensions
 @import 'extensions/extensions';
 
