--- a/theme/sections/live-chat.liquid
+++ b/theme/sections/live-chat.liquid
@@ -14,9 +14,7 @@
     <img
       class="messageus_unhovered"
       alt="{{ section.settings.img_icon.image.alt }}"
-      src="{{ section.settings.img_icon | img_url: '45x' }}"
-      srcset="{{ section.settings.img_icon | img_url: '45x' }} 1x, {{ section.settings.img_icon | img_url: '45x', scale: 2 }} 2x,  {{ section.settings.img_icon | img_url: '45x', scale: 3 }} 3x,  {{ section.settings.img_icon | img_url: '45x', scale: 4 }} 4x"
-      size="45px"
+      src="{{ section.settings.img_icon | img_url: 'master' }}"
     >
   </a>
   <style>
