--- a/theme/templates/gift_card.liquid
+++ b/theme/templates/gift_card.liquid
@@ -81,7 +81,7 @@
                 <div class="corner top-right"></div>
                 <div class="corner bottom-left"></div>
                 <div id="gift-card">
-                  <img lazyload="lazy" src="{{ 'gift-card/card.jpg' | shopify_asset_url }}" rv-shopify-img="'{{ 'gift-card/card.jpg' | shopify_asset_url }}'" alt="Gift card illustration">
+                  <img lazyload="lazy" src="{{ 'gift-card/card.jpg' | shopify_asset_url }}" alt="Gift card illustration">
                   {% assign initial_value_size = formatted_initial_value | size %}
                   <div id="gift-card-amount" class="{% if initial_value_size > 6 %}medium{% endif %}">
                     {% if gift_card.balance != gift_card.initial_value %}
