--- a/theme/templates/product.liquid
+++ b/theme/templates/product.liquid
@@ -11,8 +11,21 @@
             lazyload="lazy"
             class="content lazy"
             src="{{ product.featured_image.src | img_url: 'master' }}"
-            rv-shopify-img="variant.featured_image.src"
-            alt="{{image.alt}}"
+            srcset="
+              {{ product.featured_image | img_url: '200x' }} 200w,
+              {{ product.featured_image | img_url: '288x' }} 288w,
+              {{ product.featured_image | img_url: '300x' }} 300w,
+              {{ product.featured_image | img_url: '384x' }} 384w,
+              {{ product.featured_image | img_url: '575x' }} 575w,
+              {{ product.featured_image | img_url: '768x' }} 768w,
+              {{ product.featured_image | img_url: '991x' }} 991w,
+              {{ product.featured_image | img_url: '1199x' }} 1199w,
+              {{ product.featured_image | img_url: '1920x' }} 1920w,
+              {{ product.featured_image | img_url: '2048x' }} 2048w,
+              {{ product.featured_image | img_url: '3072x' }} 3072w,
+              {{ product.featured_image | img_url: '4096x' }} 4096w"
+            sizes="100vw"
+            alt="{{ product.title }} - {{ product.featured_image.alt }}"
           />
         </div>
       </div>
@@ -26,21 +39,6 @@
           <img
             lazyload="lazy"
             class="content lazy"
-            rv-shopify-img="image"
-            {% comment %}
-              rv-srcset-200w="'//placehold.it/200x'"
-              rv-srcset-288w="'//placehold.it/288x'"
-              rv-srcset-300w="'//placehold.it/300x'"
-              rv-srcset-384w="'//placehold.it/384x'"
-              rv-srcset-575w="'//placehold.it/575x'"
-              rv-srcset-768w="'//placehold.it/768x'"
-              rv-srcset-991w="'//placehold.it/991x'"
-              rv-srcset-1199w="'//placehold.it/1199x'"
-              rv-srcset-1920w="'//placehold.it/1920x'"
-              rv-srcset-2048w="'//placehold.it/2048x'"
-              rv-srcset-3072w="'//placehold.it/3072x'"
-              rv-srcset-4096w="'//placehold.it/4096x'"
-            {% endcomment %}
             rv-srcset-200w="image | img_url '200x'"
             rv-srcset-288w="image | img_url '288x'"
             rv-srcset-300w="image | img_url '300x'"
@@ -55,6 +53,7 @@
             rv-srcset-4096w="image | img_url '4096x'"
             sizes="(min-width: 768px) 50vw, 100vw"
             rv-sizes="row.sizes"
+            alt="{{ product.title }}"
             rv-alt="variant.title"
           />
         </div>
