--- a/theme/templates/page.cookies.liquid
+++ b/theme/templates/page.cookies.liquid
@@ -190,6 +190,41 @@
         </tbody>
       </table>
 
+
+      <h3 rv-i18n-html="'cookies.pinterest.title'">{{'cookies.pinterest.title'|t}}</h3>
+      <p rv-i18n-html="'cookies.pinterest.description_html'">
+        {{'cookies.pinterest.description_html'|t}}
+      </p>
+
+      <table class="table table-borderless">
+        <tbody>
+          <thead>
+            <tr>
+              <th rv-i18n-text="'cookies.table_name'">{{'cookies.table_name'|t}}</th>
+              <th rv-i18n-text="'cookies.table_description'">{{'cookies.table_description'|t}}</th>
+            </tr>
+          </thead>
+          <tr>
+            <td><code><span>_pinterest_sess</span></code></td>
+            <td rv-i18n-text="'cookies.pinterest._pinterest_sess'">{{'cookies.pinterest._pinterest_sess'|t}}</td>
+          </tr>
+          <tr>
+            <td><code><span>_pinterest_ct</span></code></td>
+            <td rv-i18n-text="'cookies.pinterest._pinterest_ct'">{{'cookies.pinterest._pinterest_ct'|t}}</td>
+          </tr>
+          <tr>
+            <td><code><span>_pinterest_ct_mw</span></code></td>
+            <td rv-i18n-text="'cookies.pinterest._pinterest_ct_mw'">{{'cookies.pinterest._pinterest_ct_mw'|t}}</td>
+          </tr>
+          <tr>
+            <td><code><span>_pinterest_ct_rt</span></code></td>
+            <td rv-i18n-text="'cookies.pinterest._pinterest_ct_rt'">{{'cookies.pinterest._pinterest_ct_rt'|t}}</td>
+          </tr>
+         
+        </tbody>
+      </table>
+
+
       <h3 rv-i18n-text="'cookies.privacy.title'">{{'cookies.privacy.title'|t}}</h3>
       <p rv-i18n-html="'cookies.privacy.description_html'">
         {{'cookies.privacy.description_html'|t}}
