--- a/theme/templates/page.privacy-settings.liquid
+++ b/theme/templates/page.privacy-settings.liquid
@@ -16,8 +16,8 @@
       <rv-privacy-settings>
         <p class="mt-2" >
           <strong rv-i18n-html="'legals.privacy.tracking_title'">{{'legals.privacy.tracking_title'|t}}</strong><br>
-          <div rv-hide="doNotTrack" rv-i18n-html="'legals.privacy.do_not_track_note'">{{'legals.privacy.do_not_track_note'|t}}</div>
-          <div rv-show="doNotTrack" rv-i18n-html="'legals.privacy.do_not_track_is_enabled'">{{'legals.privacy.do_not_track_is_enabled'|t}}</div>
+          <div rv-hide="doNotTrack" rv-i18n-html="'legals.privacy.do_not_track_note_html'">{{'legals.privacy.do_not_track_note_html'|t}}</div>
+          <div rv-show="doNotTrack" rv-i18n-html="'legals.privacy.do_not_track_is_enabled_html'">{{'legals.privacy.do_not_track_is_enabled_html'|t}}</div>
         </p>
         {% comment %} disabled until we have a working solution {% endcomment %}
         <div class="custom-control custom-checkbox" hidden>
