--- a/src/ts/components/shopify-product-item/shopify-product-item.component.scss
+++ b/src/ts/components/shopify-product-item/shopify-product-item.component.scss
@@ -1,21 +1,42 @@
 rv-shopify-product-item {
   display: block;
+
+  .detailMenu, .colorMenu, .chooseSizeMenu, .img.content {
+    transition: all 300ms ease;
+  }
+
+  // Dont show lazy loader in background of detail-menu 
   img.content {
-    transition: padding 300ms ease;
-    padding-bottom: 60px;
     &.show-detail-menu {
-      padding-bottom: 214px;
       background-image: none;
     }
   }
 
+  .chooseSizeMenu {
+    // background-color: transparent;
+    // Remove this to activate bg hover effekt
+    background-color: white;
+  }
+
   .detailMenu {
-    transition: opacity 300ms ease;
     opacity: 0;
     pointer-events: none;
     &.show {
       opacity: 1;
       pointer-events: all;
+    }
+  }
+
+
+
+  &:hover {
+    .chooseSizeMenu {
+      background-color: white;
+    }
+    .detailMenu, .colorMenu {
+      &.show {
+        background-color: white;
+      }
     }
   }
 
