--- a/theme/snippets/jumplink-product-collection-grid-item-col-ratio-3-4.liquid
+++ b/theme/snippets/jumplink-product-collection-grid-item-col-ratio-3-4.liquid
@@ -14,44 +14,26 @@
       lazyload="lazy"
       class="content lazy"
       rv-class-show-detail-menu="showDetailMenu"
-      src="{{ product.featured_image | img_url: '575x' }}"
+      src="{{ product.featured_image | img_url: '1200x1600', crop: 'center', format: 'pjpg' }}"
       {% comment %}
-        srcset="{{ product.featured_image | img_url: '300x'}} 300w, {{ product.featured_image | img_url: '600x'}} 600w, {{ product.featured_image | img_url: '1200x'}} 1200w, {{ product.featured_image | img_url: '2400x'}} 2400w, {{ product.featured_image | img_url: '4000x'}} 4000w"
-        For size testing
-
-        Grid breakpoints
-        xs: 0 - 575w       2 images per row
-        sm: 576w - 768w   2 images per row
-        md: 768w - 991w   2 images per row
-        lg: 992w - 1199w  3 images per row
-        xl (hd): 1200w - 1920w  4 images per row
-        xl (4k): 1921w - 4096w  4 images per row
-
-        srcset="
-          //placehold.it/288x 288w,
-          //placehold.it/384x 384w,
-          //placehold.it/768x 768w,
-          //placehold.it/496x 496w,
-          //placehold.it/991x 991w,
-          //placehold.it/1199x 1199w,
-          //placehold.it/1920x 1920w,
-          //placehold.it/2048x 2048w,
-          //placehold.it/3072x 3072w,
-          //placehold.it/4096x 4096w"
+        highest quality first for safari, see https://stackoverflow.com/q/45487105
       {% endcomment %}
       srcset="
-        {{ product.featured_image | img_url: '200x' }} 200w,
-        {{ product.featured_image | img_url: '288x' }} 288w,
-        {{ product.featured_image | img_url: '300x' }} 300w,
-        {{ product.featured_image | img_url: '384x' }} 384w,
-        {{ product.featured_image | img_url: '575x' }} 575w,
-        {{ product.featured_image | img_url: '768x' }} 768w,
-        {{ product.featured_image | img_url: '991x' }} 991w,
-        {{ product.featured_image | img_url: '1199x' }} 1199w,
-        {{ product.featured_image | img_url: '1920x' }} 1920w,
-        {{ product.featured_image | img_url: '2048x' }} 2048w,
-        {{ product.featured_image | img_url: '3072x' }} 3072w,
-        {{ product.featured_image | img_url: '4096x' }} 4096w"
+        {{ product.featured_image | img_url: '1200x1600', crop: 'center', format: 'pjpg' }} 1200w,
+        {{ product.featured_image | img_url: '1024x1365', crop: 'center', format: 'pjpg' }} 1024w,
+        {{ product.featured_image | img_url: '991x1321', crop: 'center', format: 'pjpg' }} 991w,
+        {{ product.featured_image | img_url: '768x1024', crop: 'center', format: 'pjpg' }} 768w,
+        {{ product.featured_image | img_url: '575x767', crop: 'center', format: 'pjpg' }} 575w,
+        {{ product.featured_image | img_url: '384x512', crop: 'center', format: 'pjpg' }} 384w,
+        {{ product.featured_image | img_url: '300x400', crop: 'center', format: 'pjpg' }} 300w,
+        {{ product.featured_image | img_url: '288x384', crop: 'center', format: 'pjpg' }} 288w,
+        {{ product.featured_image | img_url: '200x267', crop: 'center', format: 'pjpg' }} 200w,
+        {{ product.featured_image | img_url: '1920x2560', crop: 'center', format: 'pjpg' }} 1920w,
+        {{ product.featured_image | img_url: '2048x2731', crop: 'center', format: 'pjpg' }} 2048w,
+        {{ product.featured_image | img_url: '4096x5461', crop: 'center', format: 'pjpg' }} 4096w
+      "
+      {% comment %} WORKAROUND TO FIX SAFARI IMGAGE STRECH BUG {% endcomment %}
+      rv-srcset-1500w="'{{ product.featured_image | img_url: '1500x2000', crop: 'center', format: 'pjpg' }}'"
       sizes="
         (min-width: 992px) 33vw,
         (min-width: 1200px) 25vw,
@@ -60,9 +42,9 @@
       alt="{{ product.featured_image.alt }}"
     />
   </a>
-  <div class="position-absolute w-100 py-2" style="bottom: 0;" rv-class-pointer-events-none="showDetailMenu | not">
-    <div class="row m-0">
-      <div class="col-12 px-0 detailMenu" rv-class-show="showDetailMenu">
+  <div class="position-absolute w-100 pointer-events-none" style="bottom: 0;" rv-class-pointer-events-none="showDetailMenu | not">
+    <div class="row m-0 detailMenu py-2" rv-class-show="showDetailMenu">
+      <div class="col-12 px-0">
         
         <div class="row">
           <div class="col-8 offset-2 d-flex justify-content-center text-center">
@@ -88,7 +70,7 @@
         </div>
       </div>
     </div>
-    <div class="row m-0">
+    <div class="row m-0 colorMenu" rv-class-show="showDetailMenu">
       
       <div class="col-12">
         <div class="row m-0">
@@ -113,7 +95,7 @@
       </div>
 
     </div>
-    <div class="row m-0 pointer-events-all">
+    <div class="row m-0 chooseSizeMenu py-2 pointer-events-all">
 
       <div class="col-12 col-md text-left text-truncate pr-md-0">
         <strong rv-route="'{{ product.url | within: collection }}'">{{ product.title }}</strong><br />
