--- a/theme/snippets/jumplink-product-item-col-ratio-3-4.liquid
+++ b/theme/snippets/jumplink-product-item-col-ratio-3-4.liquid
@@ -8,14 +8,29 @@
   {% assign colClass = 'col' %}
 {% endif %}
 
-<rv-shopify-product-item handle="{{product.handle}}" class="{{colClass}} {{ orderClass }} px-0 content-box ratio-3-4">
-  <a rv-route="'{{ product.url | within: collection }}'" href="{{product.url | within: collection }}">
+<rv-shopify-product-item handle="{{ product.handle }}" class="{{ colClass }} {{ orderClass }} px-0 content-box ratio-3-4">
+  <a rv-route="'{{ product.url | within: collection }}'" href="{{ product.url | within: collection }}">
     <img
       lazyload="lazy"
       class="content has-xs-spacing has-sm-spacing"
-      src="{{ product.featured_image | img_url: 'master'}}"
-      srcset="{{ product.featured_image  | img_url: '512x' }} 512w, {{ product.featured_image | img_url: '1024x' }} 1024w, {{ product.featured_image | img_url: '2048x' }} 2048w, {{ product.featured_image | img_url: '4096x' }} 4096w, {{ product.featured_image | img_url: 'master' }} 5760w"
-      alt="{{product.featured_image.alt}}"
+      src="{{ product.featured_image | img_url: '1200x1600', crop: 'center', format: 'pjpg' }}"
+      srcset="
+        {{ product.featured_image | img_url: '1200x1600', crop: 'center', format: 'pjpg' }} 1200w,
+        {{ product.featured_image | img_url: '1024x1365', crop: 'center', format: 'pjpg' }} 1024w,
+        {{ product.featured_image | img_url: '991x1321', crop: 'center', format: 'pjpg' }} 991w,
+        {{ product.featured_image | img_url: '768x1024', crop: 'center', format: 'pjpg' }} 768w,
+        {{ product.featured_image | img_url: '575x767', crop: 'center', format: 'pjpg' }} 575w,
+        {{ product.featured_image | img_url: '384x512', crop: 'center', format: 'pjpg' }} 384w,
+        {{ product.featured_image | img_url: '300x400', crop: 'center', format: 'pjpg' }} 300w,
+        {{ product.featured_image | img_url: '288x384', crop: 'center', format: 'pjpg' }} 288w,
+        {{ product.featured_image | img_url: '200x267', crop: 'center', format: 'pjpg' }} 200w,
+        {{ product.featured_image | img_url: '1920x2560', crop: 'center', format: 'pjpg' }} 1920w,
+        {{ product.featured_image | img_url: '2048x2731', crop: 'center', format: 'pjpg' }} 2048w,
+        {{ product.featured_image | img_url: '4096x5461', crop: 'center', format: 'pjpg' }} 4096w
+      "
+      {% comment %} WORKAROUND TO FIX SAFARI IMGAGE STRECH BUG {% endcomment %}
+      rv-srcset-1500w="'{{ product.featured_image | img_url: '1500x2000', crop: 'center', format: 'pjpg' }}'"
+      alt="{{ product.featured_image.alt }}"
       style="padding-bottom: 60px;"
     />
   </a>
